--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This application is an MVP twitter 'clone' using Rails, ReactJS, and the flux pattern. Credit for the baseline app goes to Sameer Buna and his pluralsight course "React.js on Rails: Building a Full Stack Web App". 
 
-Things you may want to cover:
+I have added features after completing the course, and this application could be used as a boilerplate for ReactJS, Rails, and flux on a windows machine.
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+If you want to use it to quickly get up and running with React in rails, go ahead and clone the repository.
+npm install should be enough to get you up and running.
